src/app/components/skill-set/skill-set.scss
@use '../../../../src/styles/abstracts/' as *;
@use '../../../../src/styles/components/' as *;

/* #region LAYOUT */

.skills-container {
  background-image: url('../../../../public/img/01_Background/Img_Original_Size/Skills_BG.png');
  background-position: bottom;
  background-size: cover;
  height: auto;
  content-visibility: auto;
  contain-intrinsic-size: 1000px;
}

.skills-content {
  @include maxWidth();
  @include flex($flex-direction: column);

  padding: 170px 120px 400px;
}

/* #endregion */

/* #region TOP CONTENT */

.top-content {
  @include flex($flex-wrap: nowrap, $justify-content: flex-start, $align-items: center);
  gap: 48px;
  width: 100%;

  &__headline {
    color: $primary-bg-color;
    display: flex;
    gap: 48px;
  }

  &__headline-row {
    @include flex($flex-direction: column, $align-items: flex-end);
    gap: 16px;

    .headline-wrapper {
      position: relative;
      width: fit-content;

      & > img {
        position: absolute;
        top: 50%;
        left: 50%;
        width: 120%;
        max-width: none;
        transform: translate(-50%, -50%);
        pointer-events: none;
        z-index: 1;
      }

      & > h2 {
        margin: 0;
        position: relative;
        z-index: 2;
      }
    }
  }

  &__img {
    width: 650px;
    position: relative;

    img {
      width: 100%;
      display: block;
    }

    &-text {
      @include flex($align-items: center, $justify-content: center);
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      width: 95%;
      font-size: clamp(6px, 2vw, 18px);
      z-index: 2;
      color: $secondary-bg-color;
      min-height: 24px;
      line-height: 0.9;
      text-align: left;
    }
  }
}

/* #endregion */

/* #region BOTTOM CONTENT */

.bottom-content {
  @include flex($flex-direction: row, $align-items: flex-end, $justify-content: flex-end);
  gap: 50px;
}

.skill-icons {
  display: grid;
  grid-template-columns: repeat(5, 72px) 200px;
  grid-column-gap: 50px;
  grid-row-gap: 50px;
  align-items: end;
  justify-content: end;
  margin-top: 48px;
  text-align: center;

  .pull-picture {
    grid-column: 6;
    grid-row: 1 / 3;
    rotate: 8deg;
  }

  &__item {
    @include flex($flex-direction: column, $align-items: center);
    gap: 12px;
    height: 100%;

    & > img {
      width: 72px;
      height: 72px;
      filter: grayscale(1);
      transition:
        filter 0.1s ease,
        transform 0.1s ease;
      transform-origin: bottom center;

      &:hover {
        filter: grayscale(0);
        transform: scale(0.8);
      }
    }

    & > span {
      font-size: 18px;
      font-weight: 400;
      color: $primary-bg-color;
    }
  }
}

.bottom-content {
  @include flex($flex-direction: row, $align-items: flex-end, $justify-content: flex-end);
  gap: 50px;
}

.pull-picture {
  rotate: 8deg;
  display: grid;
  grid-template-areas: 'stack';
  position: relative;
  width: 200px;
  height: 200px;
  padding-bottom: 0;

  &__b-arrow {
    position: absolute;
    left: 50%;
    top: 30px;
    transform: translateX(-50%);
    width: 60px;
    height: auto;
    z-index: 3;
    pointer-events: none;
  }

  &__a,
  &__c {
    grid-area: stack;
    width: 200px;
    height: 200px;
    border: none;
    cursor: pointer;
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    display: block;
    background-color: transparent;
    outline: none;
    box-shadow: none;
  }

  &__a {
    background-image: url('../../../../public/img/03_Stickers/01_Skills_Peel_off/Color_option_3/A.png');
    z-index: 3;

    & > p {
      @include flex($align-items: center, $justify-content: center);
      position: absolute;
      font-family: 'Kalam-Regular', 'Kalam', cursive;
      font-weight: 400;
      font-size: 40px;
      color: $primary-bg-color;
      margin: 0;
      width: 100%;
      height: 100%;
      text-align: center;
      left: 0px;
      top: 0px;
      pointer-events: none;
      padding-top: 60px;
      line-height: 1.1;
    }
  }

  &__c {
    background-image: url('../../../../public/img/03_Stickers/01_Skills_Peel_off/Color_option_3/C.png');
    z-index: 1;
  }

  &__c-content {
    @include flex($align-items: center, $justify-content: flex-start, $flex-direction: column);
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    text-align: center;
    color: $primary-bg-color;
    pointer-events: none;
    opacity: 0;
    transition: opacity 0.4s ease;
    line-height: 1.1;

    & > p {
      margin-top: 40px;
      margin-bottom: 8px;
    }

    &--visible {
      opacity: 1;
    }
  }

  &__c-icons {
    @include flex($align-items: center, $justify-content: center);
    gap: 16px;
  }

  &__c-icon {
    @include flex($align-items: center, $justify-content: center, $flex-direction: column);
    gap: 5px;

    img {
      width: 40px;
      height: 40px;
      object-fit: contain;
    }

    span {
      font-size: 14px;
      color: white;
    }
  }
}

/* #endregion */

/* #region ANIMATIONS */

@keyframes peel-a {
  0% {
    clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 100% 100%, 0% 100%);
  }
  50% {
    clip-path: polygon(0% 0%, 0% 0%, 100% 100%, 100% 100%, 0% 100%);
  }
  100% {
    clip-path: polygon(0% 100%, 0% 100%, 0% 100%, 0% 100%, 0% 100%);
  }
}

@keyframes peel-back {
  0% {
    clip-path: polygon(0% 100%, 0% 100%, 0% 100%, 0% 100%, 0% 100%);
  }
  50% {
    clip-path: polygon(0% 0%, 0% 0%, 100% 100%, 100% 100%, 0% 100%);
  }
  100% {
    clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 100% 100%, 0% 100%);
  }
}

.peel-a {
  animation: peel-a 0.4s linear forwards;
  pointer-events: none;
}

.peel-back {
  animation: peel-back 0.4s linear both;
}

/* #endregion */

/* #region RESPONSIVE */

@media (max-width: 1180px) {
  .skills-content {
    padding: 80px 24px 200px;
    align-items: center;
  }

  .top-content {
    justify-content: center;
  }
}

@media (max-width: 1024px) {
  .skills-content {
    padding: 80px 24px 200px;
    align-items: center;
  }

  .top-content {
    flex-direction: column;
    gap: 24px;
    width: 100%;
    align-items: center;

    &__headline {
      @include flex($flex-direction: column);
    }
  }

  .top-content__img {
    width: 100%;
    max-width: 420px;

    & > p {
      font-size: 18px;
    }
  }

  .pull-picture {
    position: relative;
    transform: none;
    rotate: 8deg;
  }

  .bottom-content {
    flex-direction: row;
    align-items: flex-end;
    justify-content: center;
    gap: 70px;
  }

  .skill-icons {
    grid-template-columns: repeat(3, 1fr);
    justify-content: center;
    padding-bottom: 20px;
    grid-column-gap: clamp(10px, 5vw, 70px);

    .pull-picture {
      grid-column: 2 / 4;
      grid-row: 4;
      rotate: 8deg;
      width: clamp(140px, 20vw, 200px);
      height: auto;
      transform: none;
      position: relative;
    }
  }
}

@media (max-width: 768px) {
  .top-content {
    width: 70%;
  }
}

@media (max-width: 590px) {
  .top-content {
    width: 90%;
  }
}

@media (max-width: 370px) {
  .skills-content {
    padding: 60px 12px 150px;
  }

  .top-content {
    width: 100%;
  }

  .bottom-content {
    gap: 16px;
    margin-top: 24px;
    flex-direction: column;
  }

  .pull-picture {
    position: relative;
    transform: translateY(0);
    margin: 40px auto 0;
  }

  .skill-icons {
    grid-column-gap: 10px;
    grid-row-gap: 20px;
    justify-content: center;
    padding-bottom: 0px;

    .pull-picture {
      grid-column: 1 / 4;
      grid-row: auto;
      justify-self: center;
      margin-top: 40px;
      transform: translateX(-15px);
    }
  }
}

/* #endregion */

